# website-cli

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
src/backend/: commands.py  config.py  connectionManager.py  deps.py  login.py  main.py  templating.py  user.py
src/backend/models/: command.py  db.py  portal.py  user.py
src/backend/templates/: chat.html  cli.html  cmd.html  cmd_log.html  index.html  login.html  motd.html  portals.html  users.html
src/backend/templates/static/scripts/: htmx-ws.js  terminal.js
src/backend/templates/static/styles/: styles.css
