[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Evann Berthou", email = "evann.berthou@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pydantic-settings>=2.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn src.backend.main:app --reload"
