[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Evann Berthou", email = "evann.berthou@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pydantic-settings>=2.2.1",
    "fastapi-login>=1.10.0",
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.1.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.7",
    "mypy>=1.9.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn src.backend.main:app --reload"
lint = { composite = ["ruff", "mypy"]}
ruff = "ruff check src/"
mypy = "mypy ."
